--- a/content/blog/using-emmet-with-sublime-text.mdx
+++ b/content/blog/using-emmet-with-sublime-text.mdx
@@ -23,7 +23,7 @@ This means that by using Emmet we can:
 - Make life easier
 
 <figure class='figure'>
-  <img class='figure-image' src='/assets/images/emmet-example-1.gif'>
+  <img class='figure-image' src='/assets/images/emmet-example-1.gif' />
   <figcaption class='figure-caption'>Scaffolding an HTML document and common navigation using&nbsp;Emmet</figcaption>
 </figure>
 
@@ -39,7 +39,7 @@ Once you have the snippet for your version of Sublime, launch the program and sh
 With Package Control installed, you can download additional plug-ins by opening the Command Palette (<kbd>Shift+&#x2318;+P</kbd> on OS X) and typing "Install Package" and then submitting the top result. A similar menu opens next, revealing the list of packages available for installation. Type "Emmet" here and choose the top result.
 
 <figure class='figure'>
-  <img class='figure-image' src='/assets/images/emmet-example-2.gif'>
+  <img class='figure-image' src='/assets/images/emmet-example-2.gif' />
   <figcaption class='figure-caption'>Installing Emmet using Package Control</figcaption>
 </figure>
 
