Run Prettier on markdown files

--- a/content/blog/ampersands-and-google-fonts.mdx
+++ b/content/blog/ampersands-and-google-fonts.mdx
@@ -3,7 +3,7 @@ title: Ampersands & Google Fonts
 type: post
 layout: article
 date: 2014-03-08
-description: "Titles, headings, and display text can all benefit from the use of a well-placed ampersand. Today Google Fonts makes using beautiful ampersands on the web easier and more widely supported than ever before."
+description: 'Titles, headings, and display text can all benefit from the use of a well-placed ampersand. Today Google Fonts makes using beautiful ampersands on the web easier and more widely supported than ever before.'
 ---
 
 Ampersands are used most effectively in display contexts, such as titles and headings, so it rarely makes sense to use the dull, standard-issue ampersands that accompany most fonts. Instead, we're often better off using a more interesting and elaborate alternative. Many fonts feature an _italic_ ampersand that is far more elegant than its conventional counterpart, making the italic ampersand preferable in a variety of contexts.
@@ -16,65 +16,69 @@ Ampersands are used most effectively in display contexts, such as titles and hea
 
 Today we are able to provide additional browser support thanks to the availability web fonts. With the help of Google Fonts specifically, **we're able to offer a cross-platform compatible solution that has widespread browser support and a tiny file size.**
 
-Styling ampersands
-------------------
+## Styling ampersands
 
 We start off by adding the URI-encoded string `&text=%26` to a Google Fonts URL inside our CSS. This allows browsers to download a miniscule _1 or 2 kilobyte_ file containing **only the ampersand character** of a specified font, rather than a font file that is 50 or 60 kilobytes larger.
 
-~~~css
+```css
 @import url(http://fonts.googleapis.com/css?family=Font+Name&text=%26);
-~~~
+```
 
 Then we create an ampersand class to apply throughout our HTML. Using some of the fonts discussed in previously mentioned articles, we're able to provide potential fallbacks in the unlikely event Google Fonts aren't supported.
 
-~~~css
+```css
 .amp {
-  font-family: "Font Name", "Baskerville", "Palatino", inherit;
+  font-family: 'Font Name', 'Baskerville', 'Palatino', inherit;
   font-size: 125%; // A little bigger just because
   font-style: italic;
   font-weight: normal;
 }
-~~~
+```
 
 We can now identify ampersands anywhere in our markup by using the new-and-improved HTML5 `<b>` elements with a class name of `amp`.
 
-~~~html
+```html
 Ampersands <b class="amp">&amp;</b> Google Fonts
-~~~
+```
 
 Now that our HTML is marked up as intended, we have everything we need in place to start adding elegant, well-supported ampersands to our web design projects. **_But_ if you're interested in sanding out a few of the rough edges, there's still _a little more_ work we can do.**
 
-Making improvements
--------------------
+## Making improvements
 
 With our CSS in its current state, querying the Google Fonts API for a single ampersand takes up _two_ HTTP requests. The first response contains the CSS file we previously imported into our style sheet. Because this CSS specifies a `@font-face` declaration for the requested font, the font itself becomes the _second_ HTTP request.
 
-~~~css
+```css
 @font-face {
   font-family: 'Font Name';
   font-style: italic;
   font-weight: 400;
-  src: local('Font Name'), local('FontName-Italic'), url(http://themes.googleusercontent.com/licensed/font?kit=V_k5El2vkhx93NlGwmIB5Y3CqX6P7Jx8H90cFJ_LRto) format('woff2'), url(http://themes.googleusercontent.com/licensed/font?kit=p0-i_LrFh6jEfrY2wE1ZTo3CqX6P7Jx8H90cFJ_LRto) format('woff');
+  src: local('Font Name'), local('FontName-Italic'),
+    url(http://themes.googleusercontent.com/licensed/font?kit=V_k5El2vkhx93NlGwmIB5Y3CqX6P7Jx8H90cFJ_LRto)
+      format('woff2'), url(http://themes.googleusercontent.com/licensed/font?kit=p0-i_LrFh6jEfrY2wE1ZTo3CqX6P7Jx8H90cFJ_LRto)
+      format('woff');
 }
-~~~
+```
 
-Due to different implentations of `@font-face` across older browsers, Google delivers unique versions of this file depending on what browser makes the request. The `@font-face` syntax has been standardized in recent years, making user agent detection less and less necesary as time goes on. If you're willing to drop Google's user agent detection *in favor of making fewer HTTP requests*, then **we can paste this CSS directly into our style sheet.**
+Due to different implentations of `@font-face` across older browsers, Google delivers unique versions of this file depending on what browser makes the request. The `@font-face` syntax has been standardized in recent years, making user agent detection less and less necesary as time goes on. If you're willing to drop Google's user agent detection _in favor of making fewer HTTP requests_, then **we can paste this CSS directly into our style sheet.**
 
-~~~css
+```css
 @font-face {
   font-family: 'Font Name';
   font-style: italic;
   font-weight: 400;
-  src: local('Font Name'), local('FontName-Italic'), url(http://themes.googleusercontent.com/licensed/font?kit=V_k5El2vkhx93NlGwmIB5Y3CqX6P7Jx8H90cFJ_LRto) format('woff2'), url(http://themes.googleusercontent.com/licensed/font?kit=p0-i_LrFh6jEfrY2wE1ZTo3CqX6P7Jx8H90cFJ_LRto) format('woff');
+  src: local('Font Name'), local('FontName-Italic'),
+    url(http://themes.googleusercontent.com/licensed/font?kit=V_k5El2vkhx93NlGwmIB5Y3CqX6P7Jx8H90cFJ_LRto)
+      format('woff2'), url(http://themes.googleusercontent.com/licensed/font?kit=p0-i_LrFh6jEfrY2wE1ZTo3CqX6P7Jx8H90cFJ_LRto)
+      format('woff');
 }
 
 .amp {
-  font-family: "Font Name", "Baskerville", "Palatino", inherit;
+  font-family: 'Font Name', 'Baskerville', 'Palatino', inherit;
   font-size: 125%;
   font-style: italic;
   font-weight: normal;
 }
-~~~
+```
 
 Alternatively, we can manually download the WOFF file Google provides and encode it as Base64 _straight into the style sheet_, saving ourselves an additional HTTP request as part of the process.
 
@@ -82,20 +86,20 @@ Although Google's CSS references both WOFF2 and WOFF files, we need only the WOF
 
 To convert a file to Base64, we can use an [online tool][base64-encoder] or the following Terminal command:
 
-~~~shell
+```shell
 openssl base64 -in input-file.ext -out output-file.ext
-~~~
+```
 
 We then add the resulting Base64 string inside our authored CSS.
 
-~~~css
+```css
 @font-face {
-  font-family: "Font Name", "Baskerville", "Palatino", inherit;
+  font-family: 'Font Name', 'Baskerville', 'Palatino', inherit;
   font-style: italic;
   font-weight: 400;
-  src: url(data:application/font-woff;charset=utf-8;base64,/*base64 string*/) format('woff');
+  src: url(data:application/font-woff;charset=utf-8;base64,base64 string) format('woff');
 }
-~~~
+```
 
 And that's it&mdash;for real this time! Using Google Fonts, a little-known query string, and a touch of Base64 magic, we're able to encode stunning ampersands directly into our CSS files and with very a microscopic file size. This approach won't always work perfecly, but it's definitely a step toward upping your type game on the web.
 
@@ -105,5 +109,4 @@ And that's it&mdash;for real this time! Using Google Fonts, a little-known query
 [csstricks-ampersand]: http://css-tricks.com/using-the-best-ampersand-available/
 [jessicahische-type]: http://jessicahische.is/talkingtype
 [simplebits-ampersand]: http://simplebits.com/notebook/2008/08/14/ampersands-2/
-
 [baskerville-ampersands]: ampersands-baskerville.svg
