--- a/content/blog/guidelines-for-letterspacing-type.mdx
+++ b/content/blog/guidelines-for-letterspacing-type.mdx
@@ -10,8 +10,7 @@ I know very few web designers who ever adjust letterspacing when setting type on
 
 Effectively letterspacing text can make the difference between good typography and _great_ typography. With that in mind, I decided to put together some guidelines for letterspacing type on the web.
 
-Capital letters
----------------
+## Capital letters
 
 It's almost always a good idea to increase letterspacing with uppercase type. Default spacing between uppercase letters is designed to be the _minimum_ necessary, so you'll usually want to add a little more breathing room between the characters.
 
@@ -21,8 +20,7 @@ This usually involves setting a `letter-spacing` value around 0.2–0.25 ems for
 
 In this example, "HTML" and "CSS" are set in _small caps_, but the same advice applies here, too.
 
-Font size
----------
+## Font size
 
 The relationship between font size and letterspacing is pretty straightforward: as size increases, letterspacing decreases, and as size decreases, letterspacing increases.
 
@@ -34,8 +32,7 @@ In more practical terms, here's what that relationship looks like:
 
 <%= codepen({ pen: 'aa39c703c30de9f1b65a3c738ad344c2', height: 438 }) %>
 
-Font weight
------------
+## Font weight
 
 Like with font size, the relationship between font weight and letterspacing follows a simple pattern: as weight increases, letterspacing decreases, and as weight decreases, letterspacing increases.
 
@@ -45,8 +42,7 @@ This is because of the way typefaces at look and feel at certain weights. Light 
 
 For a more in-depth explanation on how weight affects letterspacing decisions, check out Carolina de Bartolo's _Typography Matters_ talk over on [YouTube][carolina].
 
-Light-on-dark text
-------------------
+## Light-on-dark text
 
 Light type set on a dark background usually benefits from a small increase in letterspacing.
 
@@ -56,8 +52,7 @@ If you look at the following example, you'll notice that the white-on-black text
 
 CSS supports `letter-spacing` values in quarter-pixel increments, so I'm able to specify `0.5px` in this example. When setting type at a small size, you'll often find comfortable letterspacing somewhere _in between_ whole pixel values.
 
-There's always more to learn
-----------------------------
+## There's always more to learn
 
 This article just _scratches the surface_ of letterspacing type on the web. Once you start combining different elements of typography, you'll run into situations where its best to work _outside_ these guidelines. For example, how does type set in italics respond to letterspacing? And in what situations does wordspacing come into play?
 
