--- a/content/blog/making-sense-of-ch-units.mdx
+++ b/content/blog/making-sense-of-ch-units.mdx
@@ -18,8 +18,7 @@ It comes down to the defintion of a ch unit. According to the [specification][sp
 
 See the problem? When compared to a line of zeros, ch units perform _exactly_ as the specification defines them. But when compared to a line of text, ch units are too wide to be useful.
 
-So let's fix the problem
-------------------------
+## So let's fix the problem
 
 Ch units have a lot of potential, but it'll take some math to get them working with proportional fonts.
 
@@ -33,8 +32,7 @@ The more text there is, the more reliable the resulting number becomes.
 
 <%= codepen({ pen: 'a6c07f62eb3d33741effa552b22abd84', height: 340 }) %>
 
-Takeaways
----------
+## Takeaways
 
 Ch units offer a lot of interesting potential once you get past their quirks. They're _invaluable_ tools when working with monospaced fonts, and if you're willing to take a few measurements and calculate a couple ratios, they're _excellent_ for proportional fonts, too.
 
