--- a/content/blog/responsive-sidenotes.mdx
+++ b/content/blog/responsive-sidenotes.mdx
@@ -11,51 +11,48 @@ In the responsive sidenotes pattern, the footnotes at the very bottom of the pag
 
 Let’s check out the code that makes it work.
 
-HTML
-----
+## HTML
 
 First off, we're going to need a container for our content. I'm partial to an `<article>` element with the class name `post`. Fill it with a few paragraphs inside `<p>` elements as usual, supplying whatever content you see fit.
 
-~~~html
+```html
 <article class="post">
   <p><!-- paragraph text--></p>
   <p><!-- some more text--></p>
   <p><!-- yet even more text--></p>
 </article>
-~~~
+```
 
 Now, in order to mark the locations of your annotations, use the following format:
 
-~~~html
+```html
 <sup class="post-marker"><a href="#note:1">1</a></sup>
-~~~
+```
 
 The `<sup>` tag semantically identifies the child `<a>` element as a superscript and also allows us to use CSS properties on two unique elements later on. The `href="#note:1"` attribute allows users to click annotation markers, repositioning the browser window to reveal related footnotes.
 
 Once the body text is annotated with the intended markup, it's time to provide the content of our footnotes and sidenotes. Right before the closing `</article>` tag, add the following ordered list, modified as needed for your content.
 
-~~~html
+```html
 <ol class="post-footnotes">
   <li id="note:1">This is the first annotation.</li>
   <li id="note:2">This one's the second.</li>
   <li id="note:3">And this is the third.</li>
 </ol>
-~~~
+```
 
 And that's it for the HTML. _Not so bad, right?_
 
-
-JavaScript
-----------
+## JavaScript
 
 The first thing we need to do is create variables for the jQuery objects we'll be using later.
 
-~~~javascript
+```javascript
 var $document = $(document),
-    $post = $('.post'),
-    $markers = $('.post .post-marker'),
-    $footnotes = $('.post-footnotes');
-~~~
+  $post = $('.post'),
+  $markers = $('.post .post-marker'),
+  $footnotes = $('.post-footnotes')
+```
 
 Once that's taken care of, we need to outline our goals and write code to do the following tasks:
 
@@ -65,44 +62,43 @@ Once that's taken care of, we need to outline our goals and write code to do the
 
 In JavaScript, that looks a lot like this:
 
-~~~javascript
+```javascript
 function createSidenotes() {
-    var $footnoteArray = $footnotes.children();
+  var $footnoteArray = $footnotes.children()
 
-    $markers.parent().wrap("<div class='post-subject'></div>");
+  $markers.parent().wrap("<div class='post-subject'></div>")
 
-    for (var i = 0; i < $markers.length; i++) {
-        $($('.post-subject')[i]).append(
-            // role='complementary' provided for ARIA support
-            "<aside class='post-sidenote' role='complementary'><p>"
-            + $($footnoteArray[i]).html()
-            + "</p></aside>"
-        );
-    }
+  for (var i = 0; i < $markers.length; i++) {
+    $($('.post-subject')[i]).append(
+      // role='complementary' provided for ARIA support
+      "<aside class='post-sidenote' role='complementary'><p>" +
+        $($footnoteArray[i]).html() +
+        '</p></aside>'
+    )
+  }
 }
-~~~
+```
 
 CSS has no way of styling parent elements, so we're also going to need to indicate whether or not our `.post` contains annotations. The following code checks whether or not any footnotes exist and then adds a class to the `.post` if the conditional statement returns `true`.
 
-~~~javascript
+```javascript
 function toggleNotes() {
-    if ($footnotes.length > 0 && $markers.length > 0) {
-        $post.addClass('has-sidenotes');
-    }
+  if ($footnotes.length > 0 && $markers.length > 0) {
+    $post.addClass('has-sidenotes')
+  }
 }
-~~~
+```
 
 Now wrap those two functions in a jQuery `ready()` method for good measure and you're almost done.
 
-~~~javascript
+```javascript
 $document.ready(function() {
-    createSidenotes();
-    toggleNotes();
-});
-~~~
+  createSidenotes()
+  toggleNotes()
+})
+```
 
-CSS
----
+## CSS
 
 Without any CSS to style and structure the new markup, our footnotes remain visible at the bottom of the page, regardless of browser width. Even worse, the _sidenotes_ fall directly beneath related `<p>` elements, making them completely ineffective until fixed.
 
@@ -116,7 +112,7 @@ Before writing any CSS, let's identify our goals this time around:
 
 Using the following CSS, let's take care of all of those goals one by one and finish things up.
 
-~~~css
+```css
 .post-marker {
   font-size: 70%;
   position: relative;
@@ -125,17 +121,17 @@ Using the following CSS, let's take care of all of those goals one by one and fi
 /* Thin non-breaking spaces are not universally supported,
    so we need to shrink a regular non-breaking space. */
 .post-marker::before {
-  content: "\00a0"; /* non-breaking space */
+  content: '\00a0'; /* non-breaking space */
   font-size: 25%; /* make the space very thin */
 }
 .post-marker a {
-  letter-spacing: 1px /* Puts narrow spaces between brackets */
+  letter-spacing: 1px; /* Puts narrow spaces between brackets */
 }
 .post-marker a::before {
-  content: "[";
+  content: '[';
 }
 .post-marker a::after {
-  content: "]";
+  content: ']';
 }
 .post-subject {
   position: relative;
@@ -158,12 +154,11 @@ Using the following CSS, let's take care of all of those goals one by one and fi
     display: block;
   }
 }
-~~~
+```
 
 And there you have it: responsive sidenotes that display on wide browsers yet degrade gracefully to footnotes in narrow browsers and environments without JavaScript support.
 
-Gotchas
--------
+## Gotchas
 
 If you've been writing CSS for a while, you might've already considered a few of the limitations associated with this approach, mainly:
 
