--- a/content/blog/typographic-units-in-css.mdx
+++ b/content/blog/typographic-units-in-css.mdx
@@ -3,15 +3,14 @@ title: Typographic Units in CSS
 type: post
 layout: article
 date: 2015-08-05
-description: "CSS offers many more units than pixels, ems, and percentages. But out of all the units available to us, I find two the most intriguing: ex and ch."
+description: 'CSS offers many more units than pixels, ems, and percentages. But out of all the units available to us, I find two the most intriguing: ex and ch.'
 ---
 
 `Ex` and `ch` are _typographic units_, meaning their values depend on an element's font family. When you use `em` or `rem` units, the browser computes their values based on the element's font size. It doesn't matter what font gets displayed onscreen, the browser will compute the same values for every typeface. This is where `ex` and `ch` units offer a little more flexibility. They require the browser to reference an element's font family _before_ computing values and applying styles.
 
 Let's take a look at these two typographic units in more detail.
 
-Ex units
---------
+## Ex units
 
 In typographic terms, x-height is determined by the height of a typeface's lowercase letters. This is often measured by the letter x, which doesn't have any ascenders or descenders. The relationship between a typeface's font size and x-height can tell you a lot about the typeface's proportions with only a couple of measurements.
 
@@ -25,8 +24,7 @@ Using `ex` units in CSS is just like using any other units. You're able to write
 
 <%= codepen({ pen: 'd81ece0b6a9436654dd4777a73634005', height: 270 })%>
 
-Ch units
---------
+## Ch units
 
 `Ch` units are based on the _characters_ of a typeface, drawing their value from the width of a font's `0` glyph. I'll warn you that this is [somewhat arbitrary][meyer-defining-ch], and the width of a `0` is often a poor estimate of a typeface's average character width. However, when using a monospace typeface — where all glyphs share identical widths — `ch` units are always dependable.
 
@@ -42,8 +40,7 @@ In the following example, I'm able to declare `max-width: 75ch` on the paragraph
 
 <%= codepen({ pen: 'fbfae4fd58d5356f6b95683fb219aa38', height: 261 })%>
 
-Takeaways
----------
+## Takeaways
 
 I'll admit that `ex` and `ch` units are more than a little weird. They're unlike any other units CSS has to offer. Weirdness aside, these typographic units offer front-end developers a lot of opportunities to explore web typography. With any luck, I hope that `ex` and `ch` pave the road for additional typographic units to follow.
 
