--- a/content/blog/using-emmet-with-sublime-text.mdx
+++ b/content/blog/using-emmet-with-sublime-text.mdx
@@ -3,13 +3,12 @@ title: Using Emmet with Sublime Text
 type: post
 layout: article
 date: 2014-04-28
-description: "Emmet is an invaluable time-saving tool for anyone who writes HTML and CSS. Thanks to Sublime Text, it only takes a little bit of effort to install and start using right now."
+description: 'Emmet is an invaluable time-saving tool for anyone who writes HTML and CSS. Thanks to Sublime Text, it only takes a little bit of effort to install and start using right now.'
 ---
 
 One of the biggest problems with hand-authoring HTML is the monotony of writing the common markup that surrounds content itself. While several templating languages exist to alleviate this issue, they introduce dependencies and abstractions that have a somewhat steep learning curve to master. Fortunately, a tool called Emmet walks the line between both manual and automated approaches&mdash;and has become one of the most useful additions to my workflow.
 
-What is Emmet?
---------------
+## What is Emmet?
 
 > Emmet (previously known as Zen Coding) is a web-developer’s toolkit that can
 > greatly improve your HTML &amp; CSS workflow you can type CSS-like expressions
@@ -24,13 +23,14 @@ This means that by using Emmet we can:
 
 <figure class='figure'>
   <img class='figure-image' src='/assets/images/emmet-example-1.gif' />
-  <figcaption class='figure-caption'>Scaffolding an HTML document and common navigation using&nbsp;Emmet</figcaption>
+  <figcaption class='figure-caption'>
+    Scaffolding an HTML document and common navigation using&nbsp;Emmet
+  </figcaption>
 </figure>
 
 Pretty useful, right? Let's find out how to install it using Sublime Text.
 
-Installing plugins
-------------------
+## Installing plugins
 
 Sublime Text has an amazing add-on called **Package Control** that lets you find and install virtually _any_ plug-in from within the application itself. The line of code to install Package Control changes with every release, so you'll have to copy it directly from the [offcial website][packagecontrol-install].
 
@@ -40,11 +40,12 @@ With Package Control installed, you can download additional plug-ins by opening 
 
 <figure class='figure'>
   <img class='figure-image' src='/assets/images/emmet-example-2.gif' />
-  <figcaption class='figure-caption'>Installing Emmet using Package Control</figcaption>
+  <figcaption class='figure-caption'>
+    Installing Emmet using Package Control
+  </figcaption>
 </figure>
 
-Using Emmet
------------
+## Using Emmet
 
 Now that we have Emmet installed, we can finally start having fun with some of its incredible shortcuts. The formula for using Emmet is very straightforward:
 
@@ -53,8 +54,7 @@ Now that we have Emmet installed, we can finally start having fun with some of i
 
 And that's it! Check out some of the most useful [shortcuts][emmet-shortcuts] you can start using right now.
 
-Getting better
---------------
+## Getting better
 
 If you’re like me, getting up to speed with new tools is an endless struggle. Fortunately, Emmet is _completely optional_ once installed and you can ignore all of its features until **you** want to use them. This makes mastering Emmet as flexible as gradually adding shortcuts to your workflow when you need them. Start with the shorthand for a class or ID, for example, and then build up from there, learning more ambitious shortcuts along the way.
 
