--- a/content/blog/sidebearings-and-alignment.mdx
+++ b/content/blog/sidebearings-and-alignment.mdx
@@ -19,8 +19,7 @@ In left-aligned type, each line's first glyph begins at the same point, but beca
 
 In the example above, you can see that the larger the font size is, the more indented the type appears.
 
-Negative margins
-----------------
+## Negative margins
 
 Accounting for sidebearings in left-aligned type is pretty straightforward in CSS: you can use `margin-left` with a negative value.
 
@@ -30,8 +29,7 @@ Depending on the typeface and font size, the value you'll need can differ wildly
 
 And there you have it: the type now looks properly aligned, thanks to a few negative margins.
 
-Takeaways
----------
+## Takeaways
 
 Tweaking alignment with CSS can become a hassle if you try to manage all the type across a website. I think it's best to focus on just the _largest_ type, and then make adjustments elsewhere as needed. It's simple to do and can have a huge effect on how cohesive your web typography looks.
 
